[metadata]
name = mclbn256
version = 0.3.1
author = Wyatt Howe
author_email = wyatt@nthparty.com
description = Python bindings for the BN254/256 pairing-friendly curve supported by the MCl library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/nthparty/mclbn256
project_urls =
    Bug Tracker = https://github.com/nthparty/mclbn256/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .

[options.package_data]
mclbn256 = *.dylib, *.so, *.dll
mclbn256.lib = *.dylib, *.so, *.dll
